@@ -87,6 +87,8 @@ they occurred between. For more detailed information see the
 @item Intltoolize Sawfish [Christopher Bratusek]
 
 @item print usefull stuff at the end of configure [Christopher Bratusek]
+
+@item add distclean rule to all Makefiles [Christopher Bratusek]
 @end itemize
 @end itemize
 
