@@ -2,6 +2,8 @@
 	* Makefile.in: create $DESTDIR$datadir/applications before 
 	               installing desktop file into it
 
+	* */Makefile.in: add distclean rule to all subdir Makefiles
+
 	* autogen.sh: - make sure we check if intltoolize successfully exited
 		      - make sure we don't use bash-specific syntax [Mark Diekhans]
 		      - don't -I /usr/share/aclocal/ [Mark Diekhans]
